--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 }
 .big-circle{
   background-color: rgba(0, 165, 34, 0.7);
@@ -61,6 +62,7 @@
   margin-top: 400rpx;
 }
 .title {
+  opacity: 0;
   height: 90rpx;
   width: 100%;
   position: fixed;
@@ -87,6 +89,9 @@
 }
 .is_show {
   display: block
+}
+.is_op {
+  opacity: 1
 }
 .top {
   height: 102rpx;
